--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <p class="stat">314 <span class="stat2">templates</span></p>
     <p class="stat">12m+ <span class="stat2"> queries</span></p>
   </div>
-  <img class="pic" src="images/image-header-desktop.jpg" alt="">
+  <div class="image-wrapper">
+    <img class="pic" src="images/image-header-desktop.jpg" alt="">
+  </div>
 
 </body>
 </html>
